[package]
name = "precision"
version = "0.1.0"
authors = ["ideahitme"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the signaling gRPC server
name = "precision"
path = "src/main.rs"

[[bin]] # Bin to run the gRPC client
name = "precision-client"
path = "src/client.rs"


[build-dependencies]
tonic-build = "0.3.1"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
tonic = "0.3.1"
prost = "0.6.1"
